2007-01-25    <tino@firebird.03.softkill.net>

	* Makefile-test.sh: UNIT_TEST now works for C++, too (somehow)

2007-01-24    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_varg): made more generic (min, max)

	* main_file.h (tino_main_file): errflag added and moved into
	separate include

	* main.h (tino_main_set_error, tino_main_get_error): added

2007-01-23    <tino@firebird.03.softkill.net>

	* setuptino.sh:"cvs add" wasn't called on the "tino" directory

2007-01-22    <tino@firebird.03.softkill.net>

	* main_getini.h (tino_main_if): added

	* getini.h (tino_getini_varg): added

	* getopt.h (tino_getopt_hook): user parameter to hook added

	* .cvsignore.dist: added *.cvsigore* as I need this nearly quite
	too often =8-/

2007-01-18    <tino@firebird.03.softkill.net>

	* sock.h: include sys/select.h, sys/time.h and sys/types.h

2006-12-12    <tino@firebird.03.softkill.net>

	* main_getopt.h: added

	* proc.h (tino_wait_child_exact): now uses
	tino_wait_child_status_string

2006-11-15    <tino@firebird.03.softkill.net>

	* slist.h (tino_glist_destroy, tino_slist_free)
	(tino_slist_iterate, tino_slist_iterate_0, tino_glist_count)
	(tino_glist_first, tino_glist_first, tino_glist_free): NULL
	pointers to lists or entries do no more SEGV
	(tino_glist_add, tino_glist_fetchfree, tino_glist_next) 
	(tino_glist_data): FATALs added in case of NULL pointer

2006-11-13    <tino@firebird.03.softkill.net>

	* filetool.h (TINO_DRIVE_SEP_CHAR, TINO_PATH_SEP_CHAR): prefixed
	with TINO_

2006-11-10    <tino@firebird.03.softkill.net>

	* Makefile.proto (Makefile): added to replace - in filenames by _

	* strprintf.h (tino_str_vprintf_null): bug fixed due to new
	TINO_VA_LIST

	* arg.h: need stdio to compile for some reason

2006-10-28    <tino@geht.net>

	* md5.h (tino_md5_bin): added

	* data.h: pos, size, seek and intr added
	(tino_data_read_all): added

2006-10-15    <tino@firebird.03.softkill.net>
